--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "description": "Things I like. Welcome to the Machine.",
     "main": "index.js",
     "scripts": {
-      "start": "http-server -p 8080" 
+      "start": "http-server -p 8080",
+      "build": "tsc"
     },
     "author": "Kenneth Barkdoll",
     "license": "None",
     "devDependencies": {
-      "http-server": "^14.0.0"
+      "http-server": "^14.0.0",
+      "typescript": "^8.19.2"
     }
   }
   
